fix: Adjust the homepage description and login box to align with the edge (#346)
fix: Adjust the homepage descrption and login box to align with the edge.

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -67,7 +67,7 @@
 .headerborder {
   display: flex;
   transform: scale(0.85);
-  margin-right: 14vw;
+  margin-right: 10vw;
   box-shadow: 0 0 50px black;
   border-radius: 20px;
 }
